test/bad/lambdas/lambda05.px

func f(g: Int->Int->Char): Void def
    return

f(_*_)
